# docs-buddy

./: .gitignore  Makefile  README.md  docs_buddy.py  pyproject.toml  tests.py
docs/: design.md
prompts/: fcis.md  solveit.md
src/docs_buddy/: __init__.py  common.py
src/docs_buddy/adapters/: __init__.py  whoosh_index.py
src/docs_buddy/domain/: __init__.py
src/docs_buddy/entrypoints/: cli.py
src/docs_buddy/services/: __init__.py
tests/integration/: test_adapters.py
tests/unit/: test_domain.py  test_frontmatter.py  test_services.py
