[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docs-buddy"
version = "0.1.0"
description = "Your package description"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    # List your dependencies here
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/docs_buddy"]
